fix about pictures beeing broken in firefox (what?)

--- a/frontend/src/components/about/About.css
+++ b/frontend/src/components/about/About.css
@@ -2,16 +2,13 @@
 	display: grid;
 	grid-template-columns: repeat(1fr, 4);
 	grid-template-rows: repeat(1fr, 5);
-	padding-left: 12vw;
-	padding-right: 12vw;
-	grid-gap: 5em;
+	margin-left: 12vw;
+	margin-right: 12vw;
 	justify-items: center;
 	margin-bottom: 6em;
 	align-items: center;
 
 }
-
-
 
 .about > h1 {
 	grid-row: 1;
@@ -25,34 +22,42 @@
 	grid-row: 2/4;
 	grid-column: 1;
 	height: 100%;
-	margin-right: 4vw;
+	max-width: 100%;
 }
 
 .about > img:last-of-type {
 	grid-row: 4/6;
 	grid-column: 4;
 	height: 100%;
-	margin-left: 4vw;
+	max-width: 100%;
+}
+
+.about > article {
+	max-width: 100%;
 }
 
 .about > article:nth-of-type(1) {
 	grid-column: 2/5;
 	grid-row: 2;
+	padding-left: 5em;
 }
 
 .about > article:nth-of-type(2) {
 	grid-column: 2/5;
 	grid-row: 3;
+	padding-left: 5em;
 }
 
 .about > article:nth-of-type(3) {
 	grid-column: 1/4;
 	grid-row: 4;
+	padding-right: 5em;
 }
 
 .about > article:nth-of-type(4) {
 	grid-column: 1/4;
 	grid-row: 5;
+	padding-right: 5em;
 }
 
 .about > article > h2 {
